--- a/used_car_prediction.ipynb
+++ b/used_car_prediction.ipynb
@@ -4931,6 +4931,97 @@
    "source": [
     "Berdasarkan hasil diatas saya akan memilih untuk mengambil 3 model dengan score tertinggi yaitu Adaboost, XGB dan RandomForest untuk selanjutnya dilakukan proses tuning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **4.4. Hyperparameter Tuning**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    4.4.1 Adaboost Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adaboost_param = {\n",
+    "    'model__n_estimators': [50, 100, 150, 200, 250, 300],\n",
+    "    'model__learning_rate': [0.01, 0.05, 0.1, 0.2, 0.5, 1.0],\n",
+    "    'model__loss': ['linear', 'square', 'exponential']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_pipeline_ada = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('model', ada)\n",
+    "])\n",
+    "\n",
+    "scoring = {\n",
+    "    mape = mean_absolute_percentage_error(y_test, y_pred_test)\n",
+    "    mae = mean_absolute_error(y_test, y_pred_test)\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
+    "    adjusted_r2_score = calculate_adjusted_r2(y_test, y_pred_test, X_train.shape[1])\n",
+    "}\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "# Define the RandomizedSearchCV\n",
+    "best_model_ada = RandomizedSearchCV(\n",
+    "    estimator=model_pipeline_ada,\n",
+    "    param_distributions=adaboost_param,\n",
+    "    cv=kf,\n",
+    "    scoring= scoring,\n",
+    "    n_jobs=-1,\n",
+    "    n_iter=50,\n",
+    "    random_state=RANDOM_STATE,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_param = {\n",
+    "    'model__n_estimators': [100, 200, 300],\n",
+    "    'model__learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'model__max_depth': [3, 5, 7],\n",
+    "    'model__subsample': [0.7, 0.8, 0.9],\n",
+    "    'model__colsample_bytree': [0.7, 0.8, 0.9]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_forest_param = {\n",
+    "    'model__n_estimators': [100, 200, 300],\n",
+    "    'model__max_depth': [None, 10, 20, 30],\n",
+    "    'model__min_samples_split': [2, 5, 10],\n",
+    "    'model__min_samples_leaf': [1, 2, 4],\n",
+    "    'model__bootstrap': [True, False]\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
